# myrender

./: .gitignore  build.gradle  gradle.properties  import-summary.txt  local.properties  settings.gradle
gvr/src/main/cpp/: CMakeLists.txt
gvr/src/main/cpp/framework/: svrAndroidMain.cpp  svrApplication.h  svrConfig.h  svrUtil.h
gvr/src/main/cpp/svrApi/jni/: Application.mk
gvr/src/main/cpp/svrApi/private/: svrApiHelper.h  svrApiTimeWarpShaders.cpp
render/src/main/cpp/: CMakeLists.txt
render/src/main/cpp/framework/: svrConfig.cpp  svrGpuTimer.cpp  svrInput.h  svrShader.h
render/src/main/cpp/svrApi/libs/armeabi-v7a/: gdb.setup
render/src/main/cpp/svrApi/private/: svrApiCore.cpp  svrApiDebugServer.cpp  svrApiSensor.cpp  svrApiTimeWarp.cpp
render/src/main/cpp/test/: apitest.cpp  mtptest.cpp  mtptest.h
renderall/src/main/cpp/: Android.mk  CMakeLists.txt  MojingAPI.cpp  MojingAPI.h  MojingManager.h  MojingSDKStatus.h
renderall/src/main/cpp/3rdPart/Qualcomm/: CSVRApiSrc.cpp
renderall/src/main/cpp/3rdPart/ktx/gyp_include/: adrenoemu.gypi  angle.gypi  default.gypi  libgl.gypi  libgles1.gypi  libgles2.gypi  libgles3.gypi  libsdl.gypi  maliemu.gypi  pvremu.gypi
renderall/src/main/cpp/3rdPart/ktx/include/: ktx.h
renderall/src/main/cpp/3rdPart/ktx/lib/: KtxLoader.cpp  checkheader.c  etcdec.cxx  gles2_funcptrs.h  gles3_funcptrs.h  ktxint.h  writer.c
renderall/src/main/cpp/3rdPart/minizip/: ioapi.c
renderall/src/main/cpp/Base/: GlUtils.cpp  MojingAllocator.h  MojingLog.h  MojingThreadsPthread.cpp  MojingTypes.h  MojingUTF8Util.cpp  Version.h
renderall/src/main/cpp/Hook/Global/: HookBase.cpp  HookBase.h  detour.cpp
renderall/src/main/cpp/Hook/HookGVR/: HookGVRTools.cpp  HookGVRTools.h
renderall/src/main/cpp/Interface/Android/: MojingAndroidAPI.cpp  MojingAndroipAPI.h
renderall/src/main/cpp/Interface/Gear/: MojingGearAPI.h
renderall/src/main/cpp/Interface/Unity/: GlStateSave.h  UnityPlugin.cpp
renderall/src/main/cpp/Interface/Unity/Unity/: IUnityGraphics.h
renderall/src/main/cpp/Interface/Unity/UnityPluginInterface/: UnityPluginInterfaceBase.cpp  UnityPluginInterfaceQ820.cpp  UnityPluginInterfaceWin32.cpp
renderall/src/main/cpp/Interface/ios/: MojingGamepad.h  MojingGamepad.mm  MojingKeyCode.h
renderall/src/main/cpp/Interface/ios/MJAudioSession/: MJAudioSession.h
renderall/src/main/cpp/Interface/ios/MJGamepad/: CWLSynthesizeSingleton.h  JoystickData_Mojing.h  MJGamepad.h  MJGamepad.mm  MJGamepadSensor.h  MJGamepadSensor.m
renderall/src/main/cpp/LogTraker/: consoleappender.cxx  hierarchylocker.cxx  logloguser.cxx  msttsappender.cxx  patternlayout.cxx  socket.cxx  syslogappender.cxx  timehelper.cxx  win32consoleappender.cxx
renderall/src/main/cpp/LogTraker/log4cplus/: msttsappender.h  qt5debugappender.h
renderall/src/main/cpp/LogTraker/log4cplus/helpers/: lockfile.h  logloguser.h  sleep.h
renderall/src/main/cpp/LogTraker/log4cplus/spi/: objectregistry.h
renderall/src/main/cpp/LogTraker/log4cplus/thread/: threads.h
renderall/src/main/cpp/Parameters/: MojingDeviceParameters.cpp  MojingDisplayParameters.cpp  MojingParameters.cpp  MojingParameters.h
renderall/src/main/cpp/Platform/: MojingPlatformBase.cpp
renderall/src/main/cpp/Profile/: GlassesConfigProfile.h  GlassesConfigProfileV2.cpp  GlassesConfigProfileV2.h  JoystickProfile.cpp  ProfileThreadMGR.cpp  UserSettingProfile.cpp  UserSettingProfile.h
renderall/src/main/cpp/Profile/ProfileV2/: DayDreamParameters.cpp  DayDreamParameters.h  GlassInfo.cpp  GlassInfo.h  ManufacturerInfo.h
renderall/src/main/cpp/Render/: GLProgram.cpp  GlGeometry.cpp  MojingRenderBase.cpp  RenderFrame.cpp  RenderFrameCirular.cpp
renderall/src/main/cpp/Render/Metal/: GlGeometryMetal.h
renderall/src/main/cpp/Reporter/: ActiveTimeInfoReporter.cpp  CrashReporter.cpp  DatabaseInfoReporter.h  GyroTempCalibrationReporter.cpp  GyroTempCalibrationReporter.h  MobileConfigUpdate.cpp
renderall/src/main/cpp/Tracker/: MojingControllerSocket.cpp  MojingGlassSensor.cpp  MojingGlassSensor.h  MojingIOSSensor.h  MojingSensorFusion.cpp  MojingTracker.cpp
renderall/src/main/cpp/framework/: svrAndroidMain.cpp  svrGeometry.cpp  svrGpuTimer.cpp  svrGpuTimer.h  svrRenderExt.cpp  svrShader.cpp  svrUtil.h
renderall/src/main/cpp/googlebreakpad/src/common/: convert_UTF.h  language.h  (+1 more)
renderall/src/main/cpp/svrApi/private/: svrApiCore.cpp  svrApiCore.h  svrApiDebugServer.h  svrApiSensor.cpp  svrApiSensor.h  svrApiTimeWarp.cpp
renderall/src/main/cpp/svrApi/public/: svrApi.h
unitymjgvr120/src/main/cpp/: CMakeLists.txt
unitymjgvr120/src/main/cpp/Base/: Base64.cpp  GlUtils.h  MojingMath.cpp
unitymjgvr120/src/main/cpp/Hook/: drawtex.cpp  drawtex.h  waithook.h
unitymjgvr120/src/main/cpp/Hook/HookGVR/: HookGVRTools.cpp  HookGVRTools.h
unitymjgvr120/src/main/cpp/Hook/eglhook/: elf_eglhook.cpp
unitymjgvr120/src/main/cpp/Interface/Android/: MojingAndroidAPI.cpp  MojingAndroipAPI.h
unitymjgvr120/src/main/cpp/Interface/Unity/: MojingMetalView.h  UnityPlugin.cpp
unitymjgvr120/src/main/cpp/Interface/ios/: MojingIOSBase.h
unitymjgvr120/src/main/cpp/LogTraker/: connectorthread.cxx  env.cxx  logger.cxx
unitymjgvr120/src/main/cpp/LogTraker/log4cplus/: nullappender.h  tchar.h
unitymjgvr120/src/main/cpp/Profile/: GlassesConfigProfileV2.cpp  InternetProfile.cpp  MojingProfileKey.h
unitymjgvr120/src/main/cpp/Profile/ProfileV2/: DayDreamParameters.cpp  DayDreamParameters.h
unitymjgvr120/src/main/cpp/Render/: EyeTextureParam.h  GlGeometry.cpp  MojingRenderBase.cpp  MojingRenderMultithread.cpp
unitymjgvr120/src/main/cpp/Render/Models/: SphereModel.h
viewcore/src/main/cpp/: BitmapOpJni.cpp  CMakeLists.txt  GLThreadUtilJni.cpp  GLThreadUtilJni.h  GenTexTask.cpp  GenTexTask.h  ThreadPool.cpp  ThreadPool.h  viewcore.cpp  viewcore.h
viewcore/src/main/cpp/model/: TextureUtil.cpp  TextureUtil.h  assimpActivity.cpp  model3d.cpp  model3d.h
viewcore/src/main/cpp/model/common/: assimpLoader.cpp  misc.cpp  myGLM.h  myJNIHelper.h  myShader.cpp  myShader.h
viewcore/src/main/cpp/model/modelAssimp/: modelAssimp.cpp  modelAssimp.h
(+2599 files in other folders)
